fix svg file path